@@ -418,8 +418,9 @@ Michal Špaček L<skim@cpan.org>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2011-2015 Michal Špaček
- BSD 2-Clause License
+© 2011-2015 Michal Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
