@@ -177,8 +177,9 @@ AUTHOR
     Michal Špaček skim@cpan.org
 
 LICENSE AND COPYRIGHT
-     © 2011-2015 Michal Špaček
-     BSD 2-Clause License
+    © 2011-2015 Michal Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.03
